[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
thiserror = "1.0.61"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
async-trait = "0.1.81"
reqwest = "0.12.5"
serde_json = "1.0.120"
maplit = "1.0.2"
bytes = "1.6.0"
flate2 = "1.0.30"
tar = "0.4.41"
dirs = "5.0.1"
lazy_static = "1.5.0"
futures = "0.3.30"
